--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,7 +1,7 @@
 /* Add CSS Styling */
 
 .odd {
-    color: rgb(252, 140, 215);
+    background-color: rgb(252, 140, 215, 0.8);
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
 
