--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,8 @@
 /* Add CSS Styling */
+
+div p {
+    background-color: yellow;
+    color: #ff0000;
+    font-size: 20px;
+    text-align: center;
+}
