--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,46 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  font-size: 16px;
+  padding: 1rem;
 }
 
 .card {
-  width: 400px;
+  width: 600px;
   background: #fff;
   margin: 16px auto;
+  margin-bottom: -5px;
+  padding: inherit;
+  font-size: inherit;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: inherit;
+  padding: inherit;
 }
 
 .content {
   background: #e3f4ff;
+  font-size: inherit;
+  padding: inherit;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin-block: inherit;
+  font-size: inherit;
+  padding: inherit;
+  text-align: center;
+  display: flex;
+  flex-flow: column;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  font-size: inherit;
+  padding: inherit;
+  width: fit-content;
+  margin: 0 auto;
 }
