--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -19,7 +19,16 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
+  padding: 16px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: larger;
 }
 
 .icon {
@@ -34,6 +43,23 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.left {
+  flex: 0 0 auto;
+}
+
+.main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.top{
+display: flex;
+justify-content: space-between;
+}
+
 
 .close-button {
   background: #eee;
