--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px 15px;
 }
 
 input {
@@ -24,3 +27,43 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a{
+  text-decoration: none;
+  color: #777777;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+.content {
+  flex: 1;
+  justify-items: center;
+  align-content: center;
+}
+
+.footer {
+  background-color: #e9e9e9;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+.left-links, .right-links {
+  display: flex;
+  gap: 15px;
+}
+
+.buttons, .input, img {
+  padding: 5px;
+}
+
